# adrite-agency-platform

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/rag/: company_info.txt  vector_store.py
backend/app/services/: ai_service.py  chat_service.py  rag_service.py
