[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Azeem Ur Rehman",email = "rehmanazeem942@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "openai (>=2.35.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "groq (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
